--- a/test/style.css
+++ b/test/style.css
@@ -9,20 +9,12 @@ html, body {
   font-weight: 300;
 }
 
-.new-date {
-  color: #6b6564;
-  border-right: 1px solid #6b6564;
-  padding-right: 0.5rem;
-  margin-right: 0.5rem;
-  font-size: 0.9rem;
-}
-
 .mainblock {
   text-align: left;
   background-color: #161515;
   display: inline-block;
   border: 2px solid #0b0505;
-  margin: 5rem;
+  margin: 1rem;
 }
 
 content {
@@ -48,66 +40,124 @@ h2 {
   font-size: 1.5rem;
 }
 
+p {
+  max-width: 40rem;
+}
+
+.new-date {
+  color: #6b6564;
+  border-right: 1px solid #6b6564;
+  padding-right: 0.5rem;
+  margin-right: 0.5rem;
+  font-size: 0.9rem;
+}
+
 footer {
   padding: 1rem 3rem;
   background-color: #0b0505;
 }
 
-/* GRID */
+/* grid */
 
 .grid-title {
   background-color: rgb(150, 107, 107);
   color: #0b0505;
-  margin-bottom: 0px;
+  margin-top: 1rem;
+  margin-bottom: 0;
+  display: flex;
+  flex-flow: row wrap;
+}
+.grid-title p {
   padding: 0.2rem;
+  display: inline-block;
+  margin: 0;
+  flex-grow: 1;
+  max-width: none;
 }
 
 .grid {
   padding: 0.5rem;
   background-color: rgb(185, 146, 146);
   overflow: auto;
-  --grid_columns: 4;
+  display: flex;
+  flex-flow: row wrap;
 }
-.grid-3 {
+.grid.width-1 {
+  --grid_columns: 1;
+}
+.grid.width-2 {
+  --grid_columns: 2;
+}
+.grid.width-3 {
   --grid_columns: 3;
 }
-.grid-5 {
+.grid.width-4 {
+  --grid_columns: 4;
+}
+.grid.width-5 {
   --grid_columns: 5;
 }
+.grid.width-6 {
+  --grid_columns: 6;
+}
 
-/* CELLS */
+/* cells */
 
-.grid > .cell-1,
-.grid > .cell-2,
-.grid > .cell-3,
-.grid > .cell-4 {
+.grid > .cell {
+  position: relative;
+  box-sizing: border-box;
+  padding: 1rem;
+  margin: 0.5rem;
+  font-weight: 400;
+  background-color: rgb(150, 107, 107);
   border: 2px solid #0b0505;
   color: #0b0505;
-  float: left;
-  padding: 0.5rem;
-  margin: 0.5rem;
-  box-sizing: border-box;
-  font-weight: 400;
-  text-align: center;
-  background-color: rgb(150, 107, 107);
+}
+.grid > .cell:hover {
+  border: 2px solid #0b050579;
 }
 
-.grid > .cell-1:hover,
-.grid > .cell-2:hover,
-.grid > .cell-3:hover,
-.grid > .cell-4:hover {
-  background-color: rgb(175, 135, 135);
-}
-
-.grid > .cell-1 {
+.grid > .cell.width-1 {
   width: calc(100% / var(--grid_columns) - 1rem);
 }
-.grid > .cell-2 {
+.grid > .cell.width-2 {
   width: calc(2 * 100% / var(--grid_columns) - 1rem);
 }
-.grid > .cell-3 {
+.grid > .cell.width-3 {
   width: calc(3 * 100% / var(--grid_columns) - 1rem);
 }
-.grid > .cell-4 {
+.grid > .cell.width-4 {
   width: calc(4 * 100% / var(--grid_columns) - 1rem);
+}
+.grid > .cell.width-5 {
+  width: calc(5 * 100% / var(--grid_columns) - 1rem);
+}
+.grid > .cell.width-6 {
+  width: calc(6 * 100% / var(--grid_columns) - 1rem);
+}
+
+/* UI */
+
+.button-block {
+  border: 1px solid #0b0505;
+  display: flex;
+  width: min-content;
+}
+
+.button-block button {
+  box-sizing: border-box;
+  border: 1px solid #0b0505;
+  background-color: #0b0505b3;
+  color: rgb(150, 107, 107);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1rem;
+  line-height: 1rem;
+  padding: 0 0.2rem;
+  font-family: monospace;
+}
+
+.button-block button:hover {
+  background-color: #0b050571;
 }
